--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ before_script:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
   - heroku plugins:install salesforce-lightning-cli
-  - export SFDX_DISABLE_ENCRYPTION=true
+  #- export SFDX_DISABLE_ENCRYPTION=true
+  - export SFDX_USE_GENERIC_UNIX_KEYCHAIN=true
   - export SFDX_DOMAIN_RETRY=300
   - sfdx plugins:install salesforcedx@pre-release
   - sfdx force:auth:jwt:grant --clientid $CONSUMERKEY --jwtkeyfile assets/server.key --username $USERNAME --setdefaultdevhubusername
@@ -30,7 +31,7 @@ script:
   - lintout=$(heroku lightning:lint lightning-component-tests/main/default/aura/);if [[ $lintout =~ .*problem.*error.*warning ]]; then echo "$lintout"; false; fi  
   - sfdx force:source:push -u travisciorg
   #- sleep 300  
-  - sfdx force:lightning:test:run --loglevel debug
-  - cat $HOME/.sfdx/sfdx.log
+  - sfdx force:lightning:test:run
+  #- cat $HOME/.sfdx/sfdx.log
   #- travis_wait runout=$(sfdx force:lightning:test:run); if [[ $? != 0 ]] || ! [[ $runout =~ Failing[[:blank:]]*0 ]]; then echo "$runout"; false; fi 
   - sfdx force:org:delete -u travisciorg -p
