--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,8 @@ machine:
 
 test:
   override:
-    - openssl aes-256-cbc -d -in assets/server.key2.enc -out assets/server.key -k $KEY
+    - echo $SERVER_KEY_HEX | xxd -r -ps >> assets/server.key
+    #- openssl aes-256-cbc -d -in assets/server.key2.enc -out assets/server.key -k $KEY
     - sfdx force:auth:jwt:grant --clientid $CONSUMERKEY --jwtkeyfile assets/server.key --username $USERNAME --setdefaultdevhubusername
     - sfdx force:org:create -s -f config/project-scratch-def.json -a travisciorg
     - sfdx force:source:push -u travisciorg
