--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,7 @@ test:
     - echo $SERVER_KEY_HEX | xxd -r -ps >> assets/server.key
     #- openssl aes-256-cbc -d -in assets/server.key2.enc -out assets/server.key -k $KEY
     - sfdx force:auth:jwt:grant --clientid $CONSUMERKEY --jwtkeyfile assets/server.key --username $USERNAME --setdefaultdevhubusername
+    - lintout=$(sfdx force:lightning:lint lightning-component-tests/main/default/aura/);if [[ $lintout =~ .*problem.*error.*warning ]]; then echo "$lintout"; false; fi  
     - sfdx force:org:create -s -f config/project-scratch-def.json -a travisciorg
     - sfdx force:source:push -u travisciorg
     - sfdx force:lightning:test:run 
